lägger in bild på startsidan under sökfält

--- a/index.html
+++ b/index.html
@@ -160,6 +160,11 @@
         <div class="tag-container"></div>
     </div>
 
+    <div class="foodimage-container" style="text-align: right; margin-top: 20px;">
+        <img src="images/handmjöl.png" alt="Logotyp" class="foodimage-container">
+
+    </div>
+
 
     <div id="data-container" class="initial"></div>
 
