--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </div>
 
     <div class="foodimage-container" style="text-align: right; margin-top: 20px;">
-        <img src="images/handmjöl.png" alt="Logotyp" class="foodimage-container">
+        <img src="images/handmjöl.png" alt="Logotyp" class="foodimage">
 
     </div>
 
