--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </div>
 
     <div id="gif-container" class="gif-container">
-        <img id="gif-image" src="/images/ramenkokar.gif" alt="GIF-bild">
+        <img id="gif-image" src="/images/citron.jpg" alt="GIF-bild">
     </div>
 
 
