--- a/startsida.html
+++ b/startsida.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="sv">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <div id="overlay" hidden></div>
@@ -18,7 +20,11 @@
     <a href="index.html" class="logo-link">
         <img src="images/visplogo/Logo Files/For Web/svg/White logo - no background.svg" alt="Logga" />
     </a>
+    <!-- Logotyp Container -->
+    <div class="logo-container" style="text-align: center; margin-top: 20px;">
+        <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logotyp" class="logo-image">
 
+    </div>
     <div class="background-container"></div>
 
     <!-- Här lägger du till de två bilderna som ska vara klickbara -->
@@ -37,4 +43,5 @@
 
     <script src="scripts.js"></script>
 </body>
+
 </html>
