--- a/startsida.html
+++ b/startsida.html
@@ -20,20 +20,19 @@
     <a href="index.html" class="logo-link">
         <img src="images/visplogo/Logo Files/For Web/svg/White logo - no background.svg" alt="Logga" />
     </a>
-    <!-- Logotyp Container -->
-    <div class="logo-container" style="text-align: center; margin-top: 20px;">
-        <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logotyp" class="logo-image">
-
+    
+    <div class="logo-main-container">
+        <img src="/images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Stor logotyp" class="main-logo">
     </div>
     <div class="background-container"></div>
 
     <!-- Här lägger du till de två bilderna som ska vara klickbara -->
-    <div id="image-links">
-        <a href="sida1.html">
-            <img src="path/to/your/image1.jpg" alt="Bild 1 Beskrivning" />
+    <div class="image-links-container">
+        <a href="path/to/first/page.html" class="image-link">
+            <img src="/images/citron.jpg" alt="Första sidan">
         </a>
-        <a href="sida2.html">
-            <img src="path/to/your/image2.jpg" alt="Bild 2 Beskrivning" />
+        <a href="path/to/second/page.html" class="image-link">
+            <img src="/images/lok.jpg" alt="Andra sidan">
         </a>
     </div>
 
