--- a/startsida.html
+++ b/startsida.html
@@ -22,17 +22,17 @@
     </a>
     
     <div class="logo-main-container">
-        <img src="/images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Stor logotyp" class="main-logo">
+        <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Stor logotyp" class="main-logo">
     </div>
     <div class="background-container"></div>
 
     <!-- Här lägger du till de två bilderna som ska vara klickbara -->
     <div class="image-links-container">
         <a href="path/to/first/page.html" class="image-link">
-            <img src="/images/citron.jpg" alt="Första sidan">
+            <img src="images/citron.jpg" alt="Första sidan">
         </a>
         <a href="path/to/second/page.html" class="image-link">
-            <img src="/images/lok.jpg" alt="Andra sidan">
+            <img src="images/lok.jpg" alt="Andra sidan">
         </a>
     </div>
 
