--- a/startsida.html
+++ b/startsida.html
@@ -29,7 +29,7 @@
     <!-- Här lägger du till de två bilderna som ska vara klickbara -->
     <div class="image-links-container">
         <a href="path/to/first/page.html" class="image-link">
-            <img src="images/receptsökingrediens.png" alt="Första sidan">
+            <img src="images/receptsokingrediens.png" alt="Första sidan">
         </a>
         <a href="path/to/second/page.html" class="image-link">
             <img src="images/generator.png" alt="Andra sidan">
