--- a/startsida.html
+++ b/startsida.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="footer-banner">
-        <!-- Footer content -->
+        <!-- Footer content . -->
     </div>
 
     <script src="scripts.js"></script>
