--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </ul>
     </nav>
 
-    <a href="index.html" class="logo-link">
+    <a href="startsida.html" class="logo-link">
         <img src="images/visplogo/Logo Files/For Web/svg/White logo - no background.svg" alt="Logga" />
     </a>
 
