lägger till en html sida för generator

--- a/startsida.html
+++ b/startsida.html
@@ -17,7 +17,7 @@
         <!-- Ditt navigationsinnehåll här -->
     </nav>
 
-    <a href="index.html" class="logo-link">
+    <a href="startsida.html" class="logo-link">
         <img src="images/visplogo/Logo Files/For Web/svg/White logo - no background.svg" alt="Logga" />
     </a>
     
