--- a/generator.html
+++ b/generator.html
@@ -26,7 +26,7 @@
     <div class="gallery-container">
         <!-- Första raden med bilder -->
         <div class="gallery-row">
-            <img src="images/chili.jpg" alt="Bildbeskrivning">
+            <img src="images/notkott.png" alt="Bildbeskrivning">
             <img src="images/citron.jpg" alt="Bildbeskrivning">
             <img src="images/lok.jpg" alt="Bildbeskrivning">
             <img src="images/pommes.jpg" alt="Bildbeskrivning">
