--- a/startsida.html
+++ b/startsida.html
@@ -31,7 +31,7 @@
         <a href="index.html" class="image-link">
             <img src="images/receptsokingr.png" alt="Första sidan">
         </a>
-        <a href="path/to/second/page.html" class="image-link">
+        <a href="generator.html" class="image-link">
             <img src="images/generator.png" alt="Andra sidan">
         </a>
     </div>
