--- a/generator.html
+++ b/generator.html
@@ -27,33 +27,30 @@
         <!-- Första raden med bilder -->
         <div class="gallery-row">
             <img src="images/notkott.png" alt="Bildbeskrivning">
-            <img src="images/citron.jpg" alt="Bildbeskrivning">
-            <img src="images/lok.jpg" alt="Bildbeskrivning">
-            <img src="images/pommes.jpg" alt="Bildbeskrivning">
-            <img src="images/froer.jpg" alt="Bildbeskrivning">
-            <img src="images/ramenkokar.gif" alt="Bildbeskrivning">
+            <img src="images/notkott.png" alt="Bildbeskrivning">
+            <img src="images/notkott.png" alt="Bildbeskrivning">
+            <img src="images/notkott.png" alt="Bildbeskrivning">
+            <img src="images/notkott.png" alt="Bildbeskrivning">
             <!-- Fortsätt med resten av bilderna för första raden -->
         </div>
 
         <!-- Andra raden med bilder -->
         <div class="gallery-row">
-            <img src="path/to/your/image1.jpg" alt="Bildbeskrivning">
-            <img src="path/to/your/image2.jpg" alt="Bildbeskrivning">
-            <img src="path/to/your/image3.jpg" alt="Bildbeskrivning">
-            <img src="path/to/your/image1.jpg" alt="Bildbeskrivning">
-            <img src="path/to/your/image2.jpg" alt="Bildbeskrivning">
-            <img src="path/to/your/image3.jpg" alt="Bildbeskrivning">
+            <img src="images/notkott.png" alt="Bildbeskrivning">
+            <img src="images/notkott.png" alt="Bildbeskrivning">
+            <img src="images/notkott.png" alt="Bildbeskrivning">
+            <img src="images/notkott.png" alt="Bildbeskrivning">
+            <img src="images/notkott.png" alt="Bildbeskrivning">
             <!-- Fortsätt med resten av bilderna för andra raden -->
         </div>
 
         <!-- Tredje raden med bilder -->
         <div class="gallery-row">
-            <img src="path/to/your/image1.jpg" alt="Bildbeskrivning">
-            <img src="path/to/your/image2.jpg" alt="Bildbeskrivning">
-            <img src="path/to/your/image3.jpg" alt="Bildbeskrivning">
-            <img src="path/to/your/image1.jpg" alt="Bildbeskrivning">
-            <img src="path/to/your/image2.jpg" alt="Bildbeskrivning">
-            <img src="path/to/your/image3.jpg" alt="Bildbeskrivning">
+            <img src="images/notkott.png" alt="Bildbeskrivning">
+            <img src="images/notkott.png" alt="Bildbeskrivning">
+            <img src="images/notkott.png" alt="Bildbeskrivning">
+            <img src="images/notkott.png" alt="Bildbeskrivning">
+            <img src="images/notkott.png" alt="Bildbeskrivning">
             <!-- Fortsätt med resten av bilderna för tredje raden -->
         </div>
     </div>
