lagt in knappbilder till sökgeneratorn

--- a/generator.html
+++ b/generator.html
@@ -26,33 +26,56 @@
     <div class="gallery-container">
         <!-- Första raden med bilder -->
         <div class="gallery-row">
-            <img src="images/notkott.png" alt="Bildbeskrivning">
-            <img src="images/notkott.png" alt="Bildbeskrivning">
-            <img src="images/notkott.png" alt="Bildbeskrivning">
-            <img src="images/notkott.png" alt="Bildbeskrivning">
-            <img src="images/notkott.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/1.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/2.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/3.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/4.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/5.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/6.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/7.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/8.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/9.png" alt="Bildbeskrivning">
             <!-- Fortsätt med resten av bilderna för första raden -->
         </div>
 
         <!-- Andra raden med bilder -->
         <div class="gallery-row">
-            <img src="images/notkott.png" alt="Bildbeskrivning">
-            <img src="images/notkott.png" alt="Bildbeskrivning">
-            <img src="images/notkott.png" alt="Bildbeskrivning">
-            <img src="images/notkott.png" alt="Bildbeskrivning">
-            <img src="images/notkott.png" alt="Bildbeskrivning">
+            
+            <img src="images/knappargenerator/knappar/10.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/11.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/12.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/13.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/14.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/15.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/16.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/17.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/18.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/19.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/20.png" alt="Bildbeskrivning">
             <!-- Fortsätt med resten av bilderna för andra raden -->
         </div>
 
         <!-- Tredje raden med bilder -->
         <div class="gallery-row">
-            <img src="images/notkott.png" alt="Bildbeskrivning">
-            <img src="images/notkott.png" alt="Bildbeskrivning">
-            <img src="images/notkott.png" alt="Bildbeskrivning">
-            <img src="images/notkott.png" alt="Bildbeskrivning">
-            <img src="images/notkott.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/21.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/22.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/23.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/24.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/25.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/26.png" alt="Bildbeskrivning">
             <!-- Fortsätt med resten av bilderna för tredje raden -->
         </div>
+
+        <!-- Fjärde raden med bilder -->
+        <div class="gallery-row">
+            <img src="images/knappargenerator/knappar/27.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/28.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/29.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/30.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/31.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/32.png" alt="Bildbeskrivning">
+            <img src="images/knappargenerator/knappar/33.png" alt="Bildbeskrivning">
+            <!-- Fortsätt med resten av bilderna för tredje raden -->
     </div>
 
     <div class="footer-banner">
