--- a/startsida.html
+++ b/startsida.html
@@ -20,27 +20,60 @@
     <a href="startsida.html" class="logo-link">
         <img src="images/visplogo/Logo Files/For Web/svg/White logo - no background.svg" alt="Logga" />
     </a>
-    
-    <!-- <div class="logo-main-container">
-        <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Stor logotyp" class="main-logo">
-    </div> -->
+
     <div class="background-container"></div>
 
-    <!-- Här lägger du till de två bilderna som ska vara klickbara -->
-    <div class="image-links-container">
-        <a href="index.html" class="image-link">
-            <img src="images/receptsokingr.png" alt="Första sidan">
-        </a>
-        <a href="generator.html" class="image-link">
-            <img src="images/generator.png" alt="Andra sidan">
-        </a>
+    <div class="search-container">
+        <div class="slider-button-container">
+            <!-- Här kan du lägga till dina filterknappar -->
+        </div>
+        <div class="input-button-container">
+            <input type="text" id="searchInput" placeholder="Skriv in sökterm...">
+            <button onclick="performSearch()">Sök</button>
+        </div>
     </div>
+
+    <div id="data-container" class="initial"></div>
 
     <div class="footer-banner">
-        <!-- Footer content . -->
+        <!-- Footer content här -->
     </div>
 
-    <script src="scripts.js"></script>
+    <script src="scripts.js">
+
+        const apiKey = 'AIzaSyBFecFz9KFsPnw6bjAKv0N0CSbs3Iszlag';
+        const spreadsheetId = '1RN9SQRzletJnH8BAgJEQCI0BtbpsHQU6Pv2L4FDGXEM';
+        const dataRange = 'Blad1!A2:J';// Exempel: 'Recept!A2:E' beroende på hur ditt kalkylark är organiserat
+
+        async function fetchData() {
+            const response = await fetch(`https://sheets.googleapis.com/v4/spreadsheets/${spreadsheetId}/values/${dataRange}?key=${apiKey}`);
+            const data = await response.json();
+            return data.values;
+        }
+
+        function performSearch() {
+            fetchData().then(data => {
+                // Antag att din datastruktur innehåller kötttyp, land, måltidstyp i de första tre kolumnerna, och receptets namn i den fjärde kolumnen
+                // Exempel på filtrering baserat på användarval (implementera din egen logik för att läsa användarval)
+                let filteredData = data.filter(row => /* din filtreringslogik här baserat på användarval */);
+                displayResults(filteredData);
+            });
+        }
+
+        function displayResults(filteredData) {
+            const resultsContainer = document.getElementById('data-container');
+            resultsContainer.innerHTML = ''; // Rensa tidigare resultat
+            filteredData.forEach(row => {
+                const div = document.createElement('div');
+                div.textContent = `Recept: ${row[3]}`; // Exempel: Visar namnet på receptet
+                resultsContainer.appendChild(div);
+            });
+        }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            // Kalla på initialiseringsfunktioner här, exempelvis för att sätta upp lyssnare på dina filterknappar
+        });
+    </script>
 </body>
 
 </html>
